--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@area73/ai-web-key-configurator": "^1.0.14",
+    "@astrojs/react": "^4.3.0",
     "@tailwindcss/vite": "^4.1.11",
-    "astro": "^5.10.2"
+    "astro": "^5.10.2",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
-    "@astrojs/tailwind": "^6.0.2",
+    "@tailwindcss/postcss": "^4.1.11",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11"
